feat: add volume mount in devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,9 @@
         "--net=host",
         "--privileged"
     ],
+    "mounts": [
+        "source=${localWorkspaceFolder},target=/root/ros2_ws,type=bind"
+    ],
     "remoteUser": "root",
     "customizations": {
         "vscode": {
